package usecase

import (
	"fmt"
	"log"
	"log/slog"
	"math/rand"
	"time"

	"github.com/LavaJover/shvark-order-service/internal/domain"
	"github.com/LavaJover/shvark-order-service/internal/infrastructure/bitwire/notifier"
	publisher "github.com/LavaJover/shvark-order-service/internal/infrastructure/kafka"
	"github.com/LavaJover/shvark-order-service/internal/usecase"
	bankdetaildto "github.com/LavaJover/shvark-order-service/internal/usecase/dto/bank_detail"
	orderdto "github.com/LavaJover/shvark-order-service/internal/usecase/dto/order"
	"github.com/google/uuid"
	"google.golang.org/grpc/codes"
	"google.golang.org/grpc/status"
)

func (uc *DefaultOrderUsecase) PickBestBankDetail(bankDetails []*domain.BankDetail, merchantID string) (*domain.BankDetail, error) {
	if len(bankDetails) == 0 {
		return nil, fmt.Errorf("no available bank details provided to pick the best")
	}
	type Trader struct {
		TraderID 		string
		Priority 		float64
		BankDetailIndex int
	}
	var traders []*Trader
	totalPriority := 0.0

	for i, bankDetail := range bankDetails {
		traderID := bankDetail.TraderID
		traffic, err := uc.TrafficUsecase.GetTrafficByTraderMerchant(traderID, merchantID)
		if err != nil {
			fmt.Println("Error while picking trader: " + err.Error())
			return nil, err
		}
		traders = append(traders, &Trader{
			TraderID: traffic.TraderID,
			Priority: traffic.TraderPriority,
			BankDetailIndex: i,
		})
		totalPriority += traffic.TraderPriority
	}

	// [0, totalPriority]
	rand.Seed(time.Now().UnixNano())
	r := rand.Float64() * totalPriority

	// random shuffle of array
	rand.Shuffle(len(traders), func(i, j int) {
		traders[i], traders[j] = traders[j], traders[i]
	})

	// pick trader regarding weight
	accumulated := 0.0
	for _, trader := range traders {
		accumulated += trader.Priority
		if r <= accumulated {
			return bankDetails[trader.BankDetailIndex], nil
		}
	}

	return bankDetails[traders[len(traders)-1].BankDetailIndex], nil
}

func (uc *DefaultOrderUsecase) FilterByTraffic(bankDetails []*domain.BankDetail, merchantID string) ([]*domain.BankDetail, error) {
	result := make([]*domain.BankDetail, 0)
	for _, bankDetail := range bankDetails {
		traffic, err := uc.TrafficUsecase.GetTrafficByTraderMerchant(bankDetail.TraderID, merchantID)
		if err != nil {
			continue
		}
		if traffic.ActivityParams.AntifraudUnlocked && traffic.ActivityParams.ManuallyUnlocked && traffic.ActivityParams.TraderUnlocked {
			result = append(result, bankDetail)
		}
	}

	return result, nil
}

// FilterByTraderBalanceOptimal - –æ–ø—Ç–∏–º–∏–∑–∏—Ä–æ–≤–∞–Ω–Ω–∞—è –≤–µ—Ä—Å–∏—è —Å –ø–∞–∫–µ—Ç–Ω—ã–º –∑–∞–ø—Ä–æ—Å–æ–º
func (uc *DefaultOrderUsecase) FilterByTraderBalanceOptimal(bankDetails []*domain.BankDetail, amountCrypto float64) ([]*domain.BankDetail, error) {
	startTime := time.Now()
	defer func() {
		log.Printf("FilterByTraderBalanceOptimal took %v", time.Since(startTime))
	}()

	if len(bankDetails) == 0 {
		return []*domain.BankDetail{}, nil
	}

	// –°–æ–±–∏—Ä–∞–µ–º —É–Ω–∏–∫–∞–ª—å–Ω—ã–µ traderIDs
	traderIDMap := make(map[string]bool)
	for _, bankDetail := range bankDetails {
		traderIDMap[bankDetail.TraderID] = true
	}

	traderIDs := make([]string, 0, len(traderIDMap))
	for traderID := range traderIDMap {
		traderIDs = append(traderIDs, traderID)
	}

	// –ü–æ–ª—É—á–∞–µ–º –±–∞–ª–∞–Ω—Å—ã –æ–¥–Ω–∏–º –∑–∞–ø—Ä–æ—Å–æ–º
	balances, err := uc.WalletHandler.GetTraderBalancesBatch(traderIDs)
	if err != nil {
		fmt.Println(err.Error())
		return nil, fmt.Errorf("failed to get trader balances: %w", err)
	}

	// –§–∏–ª—å—Ç—Ä—É–µ–º –±–∞–Ω–∫–æ–≤—Å–∫–∏–µ —Ä–µ–∫–≤–∏–∑–∏—Ç—ã
	result := make([]*domain.BankDetail, 0, len(bankDetails))
	validCount := 0

	for _, bankDetail := range bankDetails {
		balance, exists := balances[bankDetail.TraderID]
		if !exists {
			log.Printf("Trader %s not found in balances", bankDetail.TraderID)
			continue
		}

		if balance >= amountCrypto {
			result = append(result, bankDetail)
			validCount++
		} else {
			log.Printf("Trader %s insufficient balance: %f < %f", 
				bankDetail.TraderID, balance, amountCrypto)
		}
	}

	log.Printf("FilterByTraderBalance: %d/%d traders have sufficient balance", 
		validCount, len(bankDetails))

	return result, nil
}

func (uc *DefaultOrderUsecase)FilterByEqualAmountFiat(bankDetails []*domain.BankDetail, amountFiat float64) ([]*domain.BankDetail, error) {
	// –û—Ç–±—Ä–æ—Å–∏—Ç—å —Ä–µ–∫–≤–∏–∑–∏—Ç—ã, –Ω–∞ –∫–æ—Ç–æ—Ä—ã—Ö —É–∂–µ –µ—Å—Ç—å —Å–æ–∑–¥–∞–Ω–Ω–∞—è –∑–∞—è–≤–∫–∞ –Ω–∞ —Å—É–º–º—É anountFiat
	result := make([]*domain.BankDetail, 0)
	for _, bankDetail := range bankDetails {
		fmt.Println("–ü—Ä–æ–≤–µ—Ä–∫–∞ –Ω–∞ –æ–¥–∏–Ω–∞–∫–æ–≤—É—é —Å—É–º–º—É!")
		orders, err := uc.OrderRepo.GetOrdersByBankDetailID(bankDetail.ID)
		if err != nil {
			return nil, err
		}
		skipBankDetail := false
		for _, order := range orders {
			if order.Status == domain.StatusPending && order.AmountInfo.AmountFiat == amountFiat {
				// –ü—Ä–æ–ø—É—Å–∫–∞–µ–º –¥–∞–Ω–Ω—ã–π —Ä–µ–∫, —Ç–∫ –µ—Å—Ç—å —Å–æ–∑–¥–∞–Ω–Ω–∞—è –∑–∞—è–≤–∫–∞ –Ω–∞ —Ç–∞–∫—É—é —Å—É–º–º—É —Ñ–∏–∞—Ç–∞
				skipBankDetail = true
				fmt.Println("–û–±–Ω–∞—Ä—É–∂–µ–Ω–∞ –∞–∫—Ç–∏–≤–Ω–∞—è –∑–∞—è–≤–∫–∞ —Å —Ç–∞–∫–æ–π –∂–µ —Å—É–º–º–æ–π!")
				break
			}
		}
		if !skipBankDetail {
			result = append(result, bankDetail)
		}
	}

	return result, nil
}

func (uc *DefaultOrderUsecase) FindEligibleBankDetails(input *orderdto.CreatePayInOrderInput) ([]*domain.BankDetail, error) {
	bankDetails, err := uc.BankDetailUsecase.FindSuitableBankDetails(
		&bankdetaildto.FindSuitableBankDetailsInput{
			AmountFiat: input.AmountFiat,
			Currency: input.Currency,
			PaymentSystem: input.PaymentSystem,
			BankCode: input.BankInfo.BankCode,
			NspkCode: input.BankInfo.NspkCode,
		},
	)
	if err != nil {
		return nil, err
	}

	if len(bankDetails) == 0 {
		log.Printf("–û—Ç—Å–µ–∏–ª–∏—Å—å –ø–æ —Å—Ç–∞—Ç–∏—á–µ—Å–∫–∏–º –ø–∞—Ä–∞–º–µ—Ç—Ä–∞–º\n")
	}
	// 0) Filter by Traffic
	bankDetails, err = uc.FilterByTraffic(bankDetails, input.MerchantParams.MerchantID)
	if err != nil {
		return nil, err
	}
	if len(bankDetails) == 0 {
		log.Printf("–û—Ç—Å–µ–∏–ª–∏—Å—å –ø–æ —Ç—Ä–∞—Ñ–∏–∫—É\n")
	}

	// 1) Filter by Trader Available balances
	bankDetails, err = uc.FilterByTraderBalanceOptimal(bankDetails, input.AmountCrypto)
	if err != nil {
		return nil, err
	}
	if len(bankDetails) == 0 {
		log.Printf("–û—Ç—Å–µ–∏–ª–∏—Å—å –ø–æ –±–∞–ª–∞–Ω—Å—É —Ç—Ä–µ–π–¥–µ—Ä–æ–≤\n")
	}

	return bankDetails, nil
}

func (uc *DefaultOrderUsecase) CheckIdempotency(clientID string) error {
	orders, err := uc.OrderRepo.GetCreatedOrdersByClientID(clientID)
	if len(orders)!=0 || err != nil {
		return status.Errorf(codes.FailedPrecondition, "payment order already exists for client: %s", clientID)
	}

	return nil
}

func (uc *DefaultOrderUsecase) CreatePayInOrder(createOrderInput *orderdto.CreatePayInOrderInput) (*orderdto.OrderOutput, error) {
    start := time.Now()
    slog.Info("CreateOrder started")

    // ===== –í–ê–õ–ò–î–ê–¶–ò–Ø –ò –ü–û–õ–£–ß–ï–ù–ò–ï STORE =====
    if createOrderInput.StoreID == "" {
        return nil, fmt.Errorf("store_id is required")
    }

    // –ü–æ–ª—É—á–∞–µ–º —Å—Ç–æ—Ä –ø–æ ID
    store, err := uc.MerchantStoreUsecase.GetMerchantStoreByID(createOrderInput.StoreID)
    if err != nil {
        return nil, fmt.Errorf("failed to get merchant store: %w", err)
    }

    if store == nil {
        return nil, fmt.Errorf("merchant store not found")
    }
    
    if !store.IsActive {
        return nil, fmt.Errorf("merchant store is not active")
    }

    // –ü—Ä–æ–≤–µ—Ä—è–µ–º –ª–∏–º–∏—Ç—ã —Å—Ç–æ—Ä–∞
    if err := uc.validateStoreLimits(store, createOrderInput.AmountFiat); err != nil {
        return nil, err
    }
    
    // check idempotency 
    if createOrderInput.ClientID != "" {
        t := time.Now()
        if err := uc.CheckIdempotency(createOrderInput.ClientID); err != nil {
            return nil, err
        }
        slog.Info("CheckIdempotency done", "elapsed", time.Since(t))
    }

    // searching for eligible bank details
    t := time.Now()
    bankDetails, err := uc.FindEligibleBankDetailsWithLock(createOrderInput)
    if err != nil {
        return nil, status.Error(codes.NotFound, "no eligible bank detail"+err.Error())
    }
    slog.Info("FindEligibleBankDetailsWithLock done", "elapsed", time.Since(t))
    if len(bankDetails) == 0 {
        log.Printf("–†–µ–∫–≤–∏–∑–∏—Ç—ã –¥–ª—è –∑–∞—è–≤–∫–∏ –Ω–µ –Ω–∞–π–¥–µ–Ω—ã!\n")
        return nil, fmt.Errorf("no available bank details")
    }
    log.Printf("–î–ª—è –∑–∞—è–≤–∫–∏ –Ω–∞–π–¥–µ–Ω—ã –¥–æ—Å—Ç—É–ø–Ω—ã–µ —Ä–µ–∫–≤–∏–∑–∏—Ç—ã!\n")

    if createOrderInput.AdvancedParams.CallbackUrl != "" {
        notifier.SendCallback(
            createOrderInput.AdvancedParams.CallbackUrl,
            createOrderInput.MerchantOrderID,
            string(domain.StatusCreated),
            0, 0, 0,
        )
    }

    // business logic to pick best bank detail
    t = time.Now()
    chosenBankDetail, err := uc.PickBestBankDetail(bankDetails, createOrderInput.MerchantID)
    if err != nil {
        return nil, status.Errorf(codes.NotFound, "failed to pick best bank detail for order")
    }
    slog.Info("PickBestBankDetail done", "elapsed", time.Since(t))

    // Get trader reward percent and save to order
    t = time.Now()
    // ===== –ü–û–õ–£–ß–ï–ù–ò–ï –¢–†–ê–§–ò–ö–ê –° –î–ê–ù–ù–´–ú–ò STORE (JOIN) =====
    trafficWithStore, err := uc.TrafficUsecase.GetTrafficWithStoreByTraderStore(
        chosenBankDetail.TraderID, 
        store.ID,
    )

    if err != nil {
        return nil, fmt.Errorf("failed to get traffic with store: %w", err)
    }
    
    if trafficWithStore == nil {
        return nil, fmt.Errorf("traffic not found for trader %s and store %s", 
            chosenBankDetail.TraderID, store.ID)
    }
    
    traffic := &trafficWithStore.Traffic
    storeFromTraffic := &trafficWithStore.Store
    slog.Info("GetTrafficByTraderMerchant done", "elapsed", time.Since(t))

    order := domain.Order{
        ID:     uuid.New().String(),
        Status: domain.StatusPending,
        MerchantInfo: domain.MerchantInfo{
            MerchantID:     createOrderInput.MerchantID,
            MerchantOrderID: createOrderInput.MerchantOrderID,
            ClientID:       createOrderInput.ClientID,
            StoreID: storeFromTraffic.ID,
        },
        AmountInfo: domain.AmountInfo{
            AmountFiat:   createOrderInput.AmountFiat,
            AmountCrypto: createOrderInput.AmountCrypto,
            CryptoRate:   createOrderInput.CryptoRate,
            Currency:     createOrderInput.Currency,
        },
        BankDetailID:  &chosenBankDetail.ID,
        Type:          domain.TypePayIn,
        Recalculated:  createOrderInput.Recalculated,
        Shuffle:       createOrderInput.Shuffle,
        TraderReward:  traffic.TraderRewardPercent,
        PlatformFee:   storeFromTraffic.PlatformFee,
        CallbackUrl:   createOrderInput.CallbackUrl,
        ExpiresAt:     time.Now().Add(20*time.Minute),

        RequisiteDetails: domain.RequisiteDetails{
            TraderID: chosenBankDetail.TraderID,
            CardNumber: chosenBankDetail.CardNumber,
            Phone: chosenBankDetail.Phone,
            Owner: chosenBankDetail.Owner,
            PaymentSystem: chosenBankDetail.PaymentSystem,
            BankName: chosenBankDetail.BankName,
            BankCode: chosenBankDetail.BankCode,
            NspkCode: chosenBankDetail.NspkCode,
            DeviceID: chosenBankDetail.DeviceID,
        },
        Metrics: domain.Metrics{},
    }
    
    t = time.Now()
    err = uc.OrderRepo.CreateOrder(&order)
    if err != nil {
        return nil, err
    }
    slog.Info("OrderRepo.CreateOrder done", "elapsed", time.Since(t))

    // Freeze crypto
    t = time.Now()
    if err := uc.WalletHandler.Freeze(chosenBankDetail.TraderID, order.ID, createOrderInput.AmountCrypto); err != nil {
        return nil, status.Error(codes.Internal, err.Error())
    }
    slog.Info("WalletHandler.Freeze done", "elapsed", time.Since(t))

    // Publish to kafka –∞—Å–∏–Ω—Ö—Ä–æ–Ω–Ω–æ
    go func(event publisher.OrderEvent) {
        if err := uc.Publisher.PublishOrder(event); err != nil {
            slog.Error("failed to publish OrderEvent:created", "error", err.Error())
        }
    }(publisher.OrderEvent{
        OrderID:   order.ID,
        TraderID:  order.RequisiteDetails.TraderID,
        Status:    "üî•–ù–æ–≤–∞—è —Å–¥–µ–ª–∫–∞",
        AmountFiat: order.AmountInfo.AmountFiat,
        Currency:  order.AmountInfo.Currency,
        BankName:  order.RequisiteDetails.BankName,
        Phone:     order.RequisiteDetails.Phone,
        CardNumber: order.RequisiteDetails.CardNumber,
        Owner:     order.RequisiteDetails.Owner,
    })

    if order.CallbackUrl != "" {
        notifier.SendCallback(
            order.CallbackUrl,
            order.MerchantInfo.MerchantOrderID,
            string(domain.StatusPending),
            0, 0, 0,
        )
    }

    slog.Info("CreateOrder finished", "total_elapsed", time.Since(start))

    return &orderdto.OrderOutput{
        Order:     order,
        BankDetail: *chosenBankDetail,
    }, nil
}

/////////////////// ATOMIC ///////////////////////////
// CreateOrderAtomic –∞—Ç–æ–º–∞—Ä–Ω–æ —Å–æ–∑–¥–∞–µ—Ç –∑–∞–∫–∞–∑ –≤ —Ç—Ä–∞–Ω–∑–∞–∫—Ü–∏–∏
func (uc *DefaultOrderUsecase) CreatePayInOrderAtomic(createOrderInput *orderdto.CreatePayInOrderInput) (*orderdto.OrderOutput, error) {
    start := time.Now()
    slog.Info("CreateOrderAtomic started")

    // ===== –í–ê–õ–ò–î–ê–¶–ò–Ø –ò –ü–û–õ–£–ß–ï–ù–ò–ï STORE =====
    if createOrderInput.StoreID == "" {
        return nil, fmt.Errorf("store_id is required")
    }

    // –ü–æ–ª—É—á–∞–µ–º —Å—Ç–æ—Ä –ø–æ ID
    store, err := uc.MerchantStoreUsecase.GetMerchantStoreByID(createOrderInput.StoreID)
    if err != nil {
        return nil, fmt.Errorf("failed to get merchant store: %w", err)
    }

    if store == nil {
        return nil, fmt.Errorf("merchant store not found")
    }
    
    if !store.IsActive {
        return nil, fmt.Errorf("merchant store is not active")
    }

    // –ü—Ä–æ–≤–µ—Ä—è–µ–º –ª–∏–º–∏—Ç—ã —Å—Ç–æ—Ä–∞
    if err := uc.validateStoreLimits(store, createOrderInput.AmountFiat); err != nil {
        return nil, err
    }

    // ===== –ù–û–í–û–ï: –ü–µ—Ä–µ–º–µ–Ω–Ω—ã–µ –¥–ª—è –º–µ—Ç—Ä–∏–∫ =====
	paymentSystem := createOrderInput.PaymentSystem
    
    // –ù–∞—á–∏–Ω–∞–µ–º —Ç—Ä–∞–Ω–∑–∞–∫—Ü–∏—é
    txRepo, err := uc.OrderRepo.BeginTx()
    if err != nil {
        return nil, fmt.Errorf("failed to begin transaction: %w", err)
    }
    
    // –ì–∞—Ä–∞–Ω—Ç–∏—Ä—É–µ–º –æ—Ç–∫–∞—Ç –≤ —Å–ª—É—á–∞–µ –æ—à–∏–±–∫–∏
    var committed bool
    defer func() {
        if !committed {
            if rollbackErr := txRepo.Rollback(); rollbackErr != nil {
                slog.Error("Failed to rollback transaction", "error", rollbackErr)
            }
        }
    }()

    // check idempotency –≤ —Ç—Ä–∞–Ω–∑–∞–∫—Ü–∏–∏
    if createOrderInput.ClientID != "" {
        if err := uc.checkIdempotencyInTx(txRepo, createOrderInput.ClientID); err != nil {
            return nil, err
        }
    }

    // –°–æ–∑–¥–∞–µ–º BankDetailRepo —Å —Ç—Ä–∞–Ω–∑–∞–∫—Ü–∏–µ–π
    bankDetailRepo := uc.BankDetailUsecase.(*usecase.DefaultBankDetailUsecase).GetBankDetailRepo()
    bankDetailRepoWithTx := bankDetailRepo.WithTx(txRepo)

    // –ü–æ–∏—Å–∫ —Ä–µ–∫–≤–∏–∑–∏—Ç–æ–≤ –≤ —Ç—Ä–∞–Ω–∑–∞–∫—Ü–∏–∏ —Å –±–ª–æ–∫–∏—Ä–æ–≤–∫–æ–π
    bankDetails, err := uc.findEligibleBankDetailsInTx(
        bankDetailRepoWithTx, 
        createOrderInput,
        store,
    )
    if err != nil {
        return nil, status.Error(codes.NotFound, "no eligible bank detail"+err.Error())
    }
    
    if len(bankDetails) == 0 {
        log.Printf("–†–µ–∫–≤–∏–∑–∏—Ç—ã –¥–ª—è –∑–∞—è–≤–∫–∏ –Ω–µ –Ω–∞–π–¥–µ–Ω—ã! –°–æ—Ö—Ä–∞–Ω—è–µ–º —Å StatusFailed\n")
        
        // –°–æ–∑–¥–∞—ë–º –∑–∞—è–≤–∫—É —Å StatusFailed
        order := domain.Order{
            ID: uuid.New().String(),
            Status: domain.StatusFailed,  // ‚Üê –ö–õ–Æ–ß–ï–í–û–ô –°–¢–ê–¢–£–°
            MerchantInfo: domain.MerchantInfo{
                MerchantID: createOrderInput.MerchantID,
                MerchantOrderID: createOrderInput.MerchantOrderID,
                ClientID: createOrderInput.ClientID,
                StoreID: createOrderInput.StoreID,
            },
            AmountInfo: domain.AmountInfo{
                AmountFiat: createOrderInput.AmountFiat,
                AmountCrypto: createOrderInput.AmountCrypto,
                CryptoRate: createOrderInput.CryptoRate,
                Currency: createOrderInput.Currency,
            },
            Type: domain.TypePayIn,
            TraderReward: 0,
            PlatformFee: 0,
            CallbackUrl: createOrderInput.CallbackUrl,
            RequisiteDetails: domain.RequisiteDetails{
                PaymentSystem: createOrderInput.PaymentSystem,
            },
            CreatedAt: time.Now(),
            UpdatedAt: time.Now(),
            ExpiresAt: time.Now().Add(24 * time.Hour),
        }
        
        // –°–æ—Ö—Ä–∞–Ω—è–µ–º –≤ –ë–î —á–µ—Ä–µ–∑ —Ç—Ä–∞–Ω–∑–∞–∫—Ü–∏—é
        if err := txRepo.CreateOrderInTx(&order); err != nil {
            log.Printf("–û—à–∏–±–∫–∞ —Å–æ—Ö—Ä–∞–Ω–µ–Ω–∏—è –∑–∞—è–≤–∫–∏: %v\n", err)
            return nil, fmt.Errorf("failed to save order: %w", err)
        }
        
        // // –ö–æ–º–º–∏—Ç–∏–º —Ç—Ä–∞–Ω–∑–∞–∫—Ü–∏—é
        if err := txRepo.Commit(); err != nil {
            return nil, fmt.Errorf("failed to commit: %w", err)
        }
        committed = true
        
        // ‚úÖ –ó–ê–ü–ò–°–´–í–ê–ï–ú –ú–ï–¢–†–ò–ö–£ –¥–ª—è –æ–∂–∏–¥–∞—é—â–∏—Ö —Ä–µ–∫–≤–∏–∑–∏—Ç–æ–≤
        uc.recordOrderPendingRequisitesMetrics(&order)
        // –î–æ–±–∞–≤–∏—Ç—å –µ—â–µ –æ–¥–Ω—É –∑–∞–ø–∏—Å—å –¥–ª—è Gauge –º–µ—Ç—Ä–∏–∫–∏
        uc.Metrics.MerchantAmountPendingRequisitesGauge.WithLabelValues(order.MerchantInfo.MerchantID, order.AmountInfo.Currency).Add(order.AmountInfo.AmountFiat)
        
        return nil, fmt.Errorf("no available bank details (order saved as FAILED)")
    }
    
    log.Printf("–î–ª—è –∑–∞—è–≤–∫–∏ –Ω–∞–π–¥–µ–Ω—ã –¥–æ—Å—Ç—É–ø–Ω—ã–µ —Ä–µ–∫–≤–∏–∑–∏—Ç—ã!\n")

    // –í—ã–±–æ—Ä –ª—É—á—à–µ–≥–æ —Ä–µ–∫–≤–∏–∑–∏—Ç–∞
    chosenBankDetail, err := uc.PickBestBankDetail(bankDetails, createOrderInput.MerchantID)
    if err != nil {
        return nil, status.Errorf(codes.NotFound, "failed to pick best bank detail for order")
    }

    // ===== –ü–û–õ–£–ß–ï–ù–ò–ï –¢–†–ê–§–ò–ö–ê –° –î–ê–ù–ù–´–ú–ò STORE (JOIN) =====
    trafficWithStore, err := uc.TrafficUsecase.GetTrafficWithStoreByTraderStore(
        chosenBankDetail.TraderID, 
        store.ID,
    )

    if err != nil {
        return nil, fmt.Errorf("failed to get traffic with store: %w", err)
    }
    
    if trafficWithStore == nil {
        return nil, fmt.Errorf("traffic not found for trader %s and store %s", 
            chosenBankDetail.TraderID, store.ID)
    }
    
    traffic := &trafficWithStore.Traffic
    storeFromTraffic := &trafficWithStore.Store
    
    traderReward := traffic.TraderRewardPercent
    platformFee := storeFromTraffic.PlatformFee

    // –°–æ–∑–¥–∞–µ–º –∑–∞–∫–∞–∑
    order := domain.Order{
        ID:     uuid.New().String(),
        Status: domain.StatusPending,
        MerchantInfo: domain.MerchantInfo{
            MerchantID:     createOrderInput.MerchantID,
            MerchantOrderID: createOrderInput.MerchantOrderID,
            ClientID:       createOrderInput.ClientID,
            StoreID:        storeFromTraffic.ID,
        },
        AmountInfo: domain.AmountInfo{
            AmountFiat:   createOrderInput.AmountFiat,
            AmountCrypto: createOrderInput.AmountCrypto,
            CryptoRate:   createOrderInput.CryptoRate,
            Currency:     createOrderInput.Currency,
        },
        BankDetailID:  &chosenBankDetail.ID,
        Type:          domain.TypePayIn,
        Recalculated:  createOrderInput.Recalculated,
        Shuffle:       createOrderInput.Shuffle,
        TraderReward:  traderReward,
        PlatformFee:   platformFee,
        CallbackUrl:   createOrderInput.CallbackUrl,
        ExpiresAt:     time.Now().Add(storeFromTraffic.DealsDuration),

        RequisiteDetails: domain.RequisiteDetails{
            TraderID: chosenBankDetail.TraderID,
            CardNumber: chosenBankDetail.CardNumber,
            Phone: chosenBankDetail.Phone,
            Owner: chosenBankDetail.Owner,
            PaymentSystem: chosenBankDetail.PaymentSystem,
            BankName: chosenBankDetail.BankName,
            BankCode: chosenBankDetail.BankCode,
            NspkCode: chosenBankDetail.NspkCode,
            DeviceID: chosenBankDetail.DeviceID,
        },
        Metrics: domain.Metrics{},
    }

    // –°–æ—Ö—Ä–∞–Ω—è–µ–º –∑–∞–∫–∞–∑ –≤ —Ç—Ä–∞–Ω–∑–∞–∫—Ü–∏–∏
    err = txRepo.CreateOrderInTx(&order)
    if err != nil {
        return nil, err
    }

    // –ö–æ–º–º–∏—Ç–∏–º —Ç—Ä–∞–Ω–∑–∞–∫—Ü–∏—é
    if err := txRepo.Commit(); err != nil {
        return nil, fmt.Errorf("failed to commit transaction: %w", err)
    }
    committed = true

    // ‚úÖ –ó–ê–ü–ò–°–¨ –ú–ï–¢–†–ò–ö–ò –°–û–ó–î–ê–ù–ù–û–ì–û –ó–ê–ö–ê–ó–ê
    uc.recordOrderCreatedMetrics(&order, paymentSystem)


    // –û—Ç–ø—Ä–∞–≤–ª—è–µ–º –∫–æ–ª–±—ç–∫ –æ —Å–æ–∑–¥–∞–Ω–∏–∏
    if createOrderInput.AdvancedParams.CallbackUrl != "" {
        notifier.SendCallback(
            createOrderInput.AdvancedParams.CallbackUrl,
            createOrderInput.MerchantOrderID,
            string(domain.StatusCreated),
            0, 0, 0,
        )
    }

    // Freeze crypto (–ø–æ—Å–ª–µ –∫–æ–º–º–∏—Ç–∞ —Ç—Ä–∞–Ω–∑–∞–∫—Ü–∏–∏)
    if err := uc.WalletHandler.Freeze(chosenBankDetail.TraderID, order.ID, createOrderInput.AmountCrypto); err != nil {
        // –ï—Å–ª–∏ freeze –Ω–µ —É–¥–∞–ª—Å—è, –æ—Ç–º–µ–Ω—è–µ–º –∑–∞–∫–∞–∑
        uc.cancelOrderDueToFreezeFailure(&order, err)
        return nil, status.Error(codes.Internal, err.Error())
    }

    // –ü—É–±–ª–∏–∫–∞—Ü–∏—è –≤ Kafka –∏ –∫–æ–ª–±—ç–∫–∏ (–∞—Å–∏–Ω—Ö—Ä–æ–Ω–Ω–æ)
    uc.sendOrderNotifications(&order, chosenBankDetail)

    slog.Info("CreateOrderAtomic finished", "total_elapsed", time.Since(start))

    return &orderdto.OrderOutput{
        Order:     order,
        BankDetail: *chosenBankDetail,
    }, nil
}
// –í—Å–ø–æ–º–æ–≥–∞—Ç–µ–ª—å–Ω—ã–µ –º–µ—Ç–æ–¥—ã –¥–ª—è –∞—Ç–æ–º–∞—Ä–Ω–æ–≥–æ —Å–æ–∑–¥–∞–Ω–∏—è
func (uc *DefaultOrderUsecase) findEligibleBankDetailsInTx(
    bankDetailRepo domain.BankDetailRepository, 
    input *orderdto.CreatePayInOrderInput,
    store *domain.MerchantStore,
) ([]*domain.BankDetail, error) {
	t := time.Now()
	searchDuration := 0.0
	defer func() {
		searchDuration = time.Since(t).Seconds()
	}()
	
	bankDetails, err := bankDetailRepo.FindSuitableBankDetailsInTx(
		&domain.SuitablleBankDetailsQuery{
			AmountFiat: input.AmountFiat,
			Currency: input.Currency,
			PaymentSystem: input.PaymentSystem,
			BankCode: input.BankInfo.BankCode,
			NspkCode: input.BankInfo.NspkCode,
		},
	)

	if err != nil {
		// ‚ùå –û–®–ò–ë–ö–ê - –ó–ê–ü–ò–°–´–í–ê–ï–ú –ú–ï–¢–†–ò–ö–£
		uc.Metrics.RecordBankDetailsNotFound(input.MerchantParams.MerchantID, input.PaymentSystem, input.Currency, input.AmountFiat)
		uc.Metrics.RecordBankDetailsSearchDuration(input.MerchantParams.MerchantID, input.PaymentSystem, searchDuration, false)
		return nil, err
	}

	if len(bankDetails) == 0 {
		// ‚ùå –ü–£–°–¢–û - –ó–ê–ü–ò–°–´–í–ê–ï–ú –ú–ï–¢–†–ò–ö–£
		uc.Metrics.RecordBankDetailsNotFound(input.MerchantParams.MerchantID, input.PaymentSystem, input.Currency, input.AmountFiat)
		uc.Metrics.RecordBankDetailsSearchDuration(input.MerchantParams.MerchantID, input.PaymentSystem, searchDuration, false)
		log.Printf("–û—Ç—Å–µ–∏–ª–∏—Å—å –ø–æ —Å—Ç–∞—Ç–∏—á–µ—Å–∫–∏–º –ø–∞—Ä–∞–º–µ—Ç—Ä–∞–º\n")
		return []*domain.BankDetail{}, nil
	}

	// ‚úÖ –ù–ê–ô–î–ï–ù–´ - –ó–ê–ü–ò–°–´–í–ê–ï–ú –ú–ï–¢–†–ò–ö–£
	uc.Metrics.RecordBankDetailsFound(input.MerchantParams.MerchantID, input.PaymentSystem)
	uc.Metrics.RecordBankDetailsSearchDuration(input.MerchantParams.MerchantID, input.PaymentSystem, searchDuration, true)

    // –§–∏–ª—å—Ç—Ä–∞—Ü–∏—è –ø–æ —Ç—Ä–∞—Ñ–∏–∫—É (—Ç–æ–ª—å–∫–æ —Ç—Ä–µ–π–¥–µ—Ä—ã, –ø–æ–¥–∫–ª—é—á–µ–Ω–Ω—ã–µ –∫ —ç—Ç–æ–º—É —Å—Ç–æ—Ä—É)
    bankDetails, err = uc.filterByStoreTraffic(bankDetails, store.ID)
    if err != nil {
        return nil, err
    }
    
    if len(bankDetails) == 0 {
        log.Printf("Filtered out by store traffic for store: %s", store.ID)
        return []*domain.BankDetail{}, nil
    }

	if len(bankDetails) == 0 {
		log.Printf("–û—Ç—Å–µ–∏–ª–∏—Å—å –ø–æ —Ç—Ä–∞—Ñ–∏–∫—É\n")
	}

	// 1) Filter by Trader Available balances
	bankDetails, err = uc.FilterByTraderBalanceOptimal(bankDetails, input.AmountCrypto)
	if err != nil {
		return nil, err
	}

	if len(bankDetails) == 0 {
		log.Printf("–û—Ç—Å–µ–∏–ª–∏—Å—å –ø–æ –±–∞–ª–∞–Ω—Å—É —Ç—Ä–µ–π–¥–µ—Ä–æ–≤\n")
	}

	return bankDetails, nil
}


func (uc *DefaultOrderUsecase) checkIdempotencyInTx(orderRepo domain.OrderRepository, clientID string) error {
    orders, err := orderRepo.GetCreatedOrdersByClientIDInTx(clientID)
    if len(orders) != 0 || err != nil {
        return status.Errorf(codes.FailedPrecondition, "payment order already exists for client: %s", clientID)
    }
    return nil
}

func (uc *DefaultOrderUsecase) FindEligibleBankDetailsWithLock(input *orderdto.CreatePayInOrderInput) ([]*domain.BankDetail, error) {
    // –ò—Å–ø–æ–ª—å–∑—É–µ–º –º–µ—Ç–æ–¥ —Å –±–ª–æ–∫–∏—Ä–æ–≤–∫–æ–π –≤–º–µ—Å—Ç–æ –æ–±—ã—á–Ω–æ–≥–æ
    bankDetails, err := uc.BankDetailUsecase.FindSuitableBankDetailsWithLock(
        &bankdetaildto.FindSuitableBankDetailsInput{
            AmountFiat:    input.AmountFiat,
            Currency:      input.Currency,
            PaymentSystem: input.PaymentSystem,
            BankCode:      input.BankInfo.BankCode,
            NspkCode:      input.BankInfo.NspkCode,
        },
    )
    if err != nil {
        return nil, err
    }

    if len(bankDetails) == 0 {
        log.Printf("–û—Ç—Å–µ–∏–ª–∏—Å—å –ø–æ —Å—Ç–∞—Ç–∏—á–µ—Å–∫–∏–º –ø–∞—Ä–∞–º–µ—Ç—Ä–∞–º\n")
        return []*domain.BankDetail{}, nil
    }

    // 0) Filter by Traffic
    bankDetails, err = uc.FilterByTraffic(bankDetails, input.MerchantParams.MerchantID)
    if err != nil {
        return nil, err
    }
    if len(bankDetails) == 0 {
        log.Printf("–û—Ç—Å–µ–∏–ª–∏—Å—å –ø–æ —Ç—Ä–∞—Ñ–∏–∫—É\n")
    }

    // 1) Filter by Trader Available balances
    bankDetails, err = uc.FilterByTraderBalanceOptimal(bankDetails, input.AmountCrypto)
    if err != nil {
        return nil, err
    }
    if len(bankDetails) == 0 {
        log.Printf("–û—Ç—Å–µ–∏–ª–∏—Å—å –ø–æ –±–∞–ª–∞–Ω—Å—É —Ç—Ä–µ–π–¥–µ—Ä–æ–≤\n")
    }

    return bankDetails, nil
}

func (uc *DefaultOrderUsecase) validateStoreLimits(store *domain.MerchantStore, amountFiat float64) error {
    // –ü—Ä–æ–≤–µ—Ä–∫–∞ –º–∏–Ω–∏–º–∞–ª—å–Ω–æ–π/–º–∞–∫—Å–∏–º–∞–ª—å–Ω–æ–π —Å—É–º–º—ã
    if amountFiat < store.MinDealAmount {
        return fmt.Errorf("amount %f is less than minimum deal amount %f for store %s", 
            amountFiat, store.MinDealAmount, store.ID)
    }
    
    if amountFiat > store.MaxDealAmount {
        return fmt.Errorf("amount %f exceeds maximum deal amount %f for store %s", 
            amountFiat, store.MaxDealAmount, store.ID)
    }
    
    // –ü—Ä–æ–≤–µ—Ä–∫–∞ –¥–Ω–µ–≤–Ω–æ–≥–æ –ª–∏–º–∏—Ç–∞ (–Ω—É–∂–Ω–æ —Ä–µ–∞–ª–∏–∑–æ–≤–∞—Ç—å –ø–æ–¥—Å—á–µ—Ç —Å–¥–µ–ª–æ–∫ –∑–∞ –¥–µ–Ω—å)
    // dailyDealsCount, err := uc.OrderRepo.GetStoreDailyDealsCount(store.ID)
    // if err != nil {
    //     return fmt.Errorf("failed to get daily deals count: %w", err)
    // }
    
    // if dailyDealsCount >= store.MaxDailyDeals {
    //     return fmt.Errorf("store %s has reached daily limit of %d deals", 
    //         store.ID, store.MaxDailyDeals)
    // }
    
    return nil
}

// –ù–æ–≤—ã–π –º–µ—Ç–æ–¥ —Ñ–∏–ª—å—Ç—Ä–∞—Ü–∏–∏ –ø–æ —Ç—Ä–∞—Ñ–∏–∫—É —Å—Ç–æ—Ä–∞
func (uc *DefaultOrderUsecase) filterByStoreTraffic(
    bankDetails []*domain.BankDetail, 
    storeID string,
) ([]*domain.BankDetail, error) {
    
    filtered := make([]*domain.BankDetail, 0, len(bankDetails))
    
    for _, bd := range bankDetails {
        // –ü—Ä–æ–≤–µ—Ä—è–µ–º, –µ—Å—Ç—å –ª–∏ –∞–∫—Ç–∏–≤–Ω—ã–π —Ç—Ä–∞—Ñ–∏–∫ –¥–ª—è —ç—Ç–æ–≥–æ —Ç—Ä–µ–π–¥–µ—Ä–∞ –∏ —Å—Ç–æ—Ä–∞
        isActive, err := uc.TrafficUsecase.IsTrafficActive(bd.TraderID, storeID)
        if err != nil {
            log.Printf("Error checking traffic for trader %s and store %s: %v", 
                bd.TraderID, storeID, err)
            continue
        }
        
        if isActive {
            filtered = append(filtered, bd)
        }
    }
    
    return filtered, nil
}